# HuffmanCoding

./: .gitignore  CMakeLists.txt  README.md  main.c
Process/: encoder.c  encoder.h  input.c  input.h  output.c  output.h  types.h
